Archive2/77/5f6805198b77e9/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pthread -pedantic main.cpp
main.cpp: In function 'std::vector<int>::const_iterator findelement(const std::vector<int>&, int)':
main.cpp:13:11: error: assignment of read-only location 'it.__gnu_cxx::__normal_iterator<_Iterator, _Container>::operator*<const int*, std::vector<int> >()'
     if(*it=target)
           ^
main.cpp:13:18: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
     if(*it=target)
                  ^
+ clang++ -stdlib=libc++ -std=c++1y -O3 -Wall -Wextra -pthread -pedantic main.cpp -lcxxrt -ldl
main.cpp:13:11: error: read-only variable is not assignable
    if(*it=target)
       ~~~^
1 error generated.
